# advent-of-code-2021

./: Cargo.toml  LICENSE  README.md
benches/: benches.rs
input/day13/: input.txt
input/day2/: input.txt
src/: all.rs  day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day2.rs  day21.rs  day22.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  lib.rs  main.rs
