[package]
name = "advent-of-code-2021"
version = "0.1.0"
authors = ["Roberto <rob.ariosa@hotmail.com>"]
edition = "2021"
default-run = "all"

[dependencies]
itertools = "0.10"

[profile.release]
lto = true

[[bin]]
name = "all"
path = "src/all.rs"

[[bin]]
name = "day1"
path = "src/day1.rs"

[[bin]]
name = "day2"
path = "src/day2.rs"

[[bin]]
name = "day3"
path = "src/day3.rs"

[[bin]]
name = "day4"
path = "src/day4.rs"
