[package]
name = "advent-of-code-2021"
version = "0.1.0"
authors = ["Roberto <rob.ariosa@hotmail.com>"]
edition = "2021"
rust-version = "1.56"
default-run = "advent-of-code-2021"

[dependencies]
itertools = "0.10"
scan_fmt = "0.2"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "benches"
harness = false

[profile.release]
lto = true

[[bin]]
name = "day1"
path = "src/day1.rs"

[[bin]]
name = "day2"
path = "src/day2.rs"

[[bin]]
name = "day3"
path = "src/day3.rs"

[[bin]]
name = "day4"
path = "src/day4.rs"

[[bin]]
name = "day5"
path = "src/day5.rs"

[[bin]]
name = "day6"
path = "src/day6.rs"