[package]
name = "advent-of-code-2021"
version = "0.1.0"
authors = ["Roberto <rob.ariosa@hotmail.com>"]
edition = "2021"
rust-version = "1.56"
default-run = "advent-of-code-2021"

[dependencies]
itertools = "0.10"
scan_fmt = "0.2"
rayon = "1.5"
regex = "1.5"
pathfinding = "3.0"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "benches"
harness = false

[profile.release]
lto = "fat"
codegen-units = 1
debug = true

[[bin]]
name = "day1"
path = "src/day1.rs"

[[bin]]
name = "day2"
path = "src/day2.rs"

[[bin]]
name = "day3"
path = "src/day3.rs"

[[bin]]
name = "day4"
path = "src/day4.rs"

[[bin]]
name = "day5"
path = "src/day5.rs"

[[bin]]
name = "day6"
path = "src/day6.rs"

[[bin]]
name = "day7"
path = "src/day7.rs"

[[bin]]
name = "day8"
path = "src/day8.rs"

[[bin]]
name = "day9"
path = "src/day9.rs"

[[bin]]
name = "day10"
path = "src/day10.rs"

[[bin]]
name = "day11"
path = "src/day11.rs"

[[bin]]
name = "day12"
path = "src/day12.rs"

[[bin]]
name = "day13"
path = "src/day13.rs"

[[bin]]
name = "day14"
path = "src/day14.rs"

[[bin]]
name = "day15"
path = "src/day15.rs"